cluster/apps/ffsync/syncserver/sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncserver
  namespace: ffsync
spec:
  selector:
    matchLabels:
      app: syncserver
  serviceName: syncserver
  replicas: 1
  template:
    metadata:
      labels:
        app: syncserver
      annotations:
        container.apparmor.security.beta.kubernetes.io/litestream: runtime/default
        container.apparmor.security.beta.kubernetes.io/syncserver: runtime/default
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      init-containers:
      - name: init-litestream
        image: litestream/litestream:0.3.8
        args: ['restore', '-if-db-not-exists', '-v', '/data/syncserver.db']
        volumeMounts:
        - name: db
          mountPath: "/data"
        - name: litestream-config-volume
          mountPath: /etc/litestream.yml
          subPath: litestream.yml
      containers:
        - name: syncserver
          image: mozilla/syncserver:latest
          ports:
            - containerPort: 5001
              name: web
          volumeMounts:
            - name: db
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 400Mi
              cpu: 500m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
        - name: litestream
          image: litestream/litestream:0.3.8
          args: ['replicate']
          volumeMounts:
            - name: db
              mountPath: /data
            - name: litestream-config-volume
              mountPath: /etc/litestream.yml
              subPath: litestream.yml
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 250m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      volumes:
        - name: tmp
          emptyDir: {}
        - name: db
          emptyDir: {}
        - name: litestream-config-volume
          configMap:
              name: litestream-config
      automountServiceAccountToken: false
  updateStrategy: {}
