cluster/apps/ffsync/syncserver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: syncserver
  namespace: ffsync
spec:
  selector:
    app: syncserver
  ports:
  - port: 5001
    targetPort: web
