cluster/apps/ffsync/syncserver/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncserver
  namespace: ffsync
  annotations:
    cert-manager.io/issuer: freeipa-issuer
    cert-manager.io/issuer-group: certmanager.freeipa.org
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/common-name: syncserver.k3s.i.${DOMAIN}
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Protocol ssl;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - syncserver.k3s.i.${DOMAIN}
    secretName: syncserver-cert
  rules:
  - host: syncserver.k3s.i.${DOMAIN}
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: syncserver
              port:
                number: 5001
